MFLT-4887 Document new metric traits and limits (#127)
* MFLT-4887 Document new metric traits and limits

 Most of the new docs live in https://deploy-preview-127--memfault-docs.netlify.app/docs/platform/metrics

 - Renamed "Fleet-wide Metrics" to "Charts" which is the word we use
   everywhere else.
   - Added a redirect `/docs/platform/fleet-wide-metrics` -> `/docs/platform/charts`
   - Documented Overview and Issue Charts here, too
 - Renamed the Device Attributes doc to Metrics and put Device Attribute and
    Timeseries docs under it.
    - Added a redirect `/docs/platform/device-attributes` ->
     `/docs/platform/metrics#device-attributes`
   - The [Metrics page](https://deploy-preview-127--memfault-docs.netlify.app/docs/platform/metrics)
     (previously Device Attributes) now contains an intro to Metrics, stealing a
     little bit from our own homepage, which also introduces Device Attributes
     and Timeseries.
 - Mentioned Timeseries Metrics in the [Alerts page](https://deploy-preview-127--memfault-docs.netlify.app/docs/platform/alerts)
   and improved the doc by adding mention of Fleet-threshold Alerts and
   Device-threshold Alerts.
 - Added a [Rate Limiting](https://deploy-preview-127--memfault-docs.netlify.app/docs/platform/rate-limiting) doc

**TODO:** mentioning Metrics from the Device Sets page (depends on
https://github.com/memfault/memfault-docs/pull/122).

--- a/docs/android/android-eventlog-metrics.mdx
+++ b/docs/android/android-eventlog-metrics.mdx
@@ -30,6 +30,14 @@ graphs in the Timeline:
 When Memfault receives a bug report containing those custom events, they will be
 displayed in that Bug Report's timeline under `EventLog`.
 
+:::note Rate Limiting
+
+Ingestion of Metrics may be
+[rate-limited](/docs/platform/rate-limiting#custom-reports). Avoid sending data
+more than once per hour per device.
+
+:::
+
 ## Logging custom metrics using EventLog
 
 The Android SDK contains an API called
