--- a/docs/platform/memfault-terminology.mdx
+++ b/docs/platform/memfault-terminology.mdx
@@ -15,6 +15,7 @@ sidebar_label: Memfault Terminology
 | Device                                           | An edge device that communicates with Memfault. It can report Events, be updated with new software, grouped into Cohorts, etc.                                                                                                                                                                                                                                                                                                         |
 | Device Attribute                                 | The latest value reported for a device for a custom metric (e.g. `battery_level`).                                                                                                                                                                                                                                                                                                                                                     |
 | Device Serial                                    | The Unique Identifier of a Device                                                                                                                                                                                                                                                                                                                                                                                                      |
+| Device Set                                       | A collection of Devices defined by a search query.                                                                                                                                                                                                                                                                                                                                                                                     |
 | Device - Active <a name="device-active"></a>     | A device that has reported diagnostics data in the last week.                                                                                                                                                                                                                                                                                                                                                                          |
 | Device - Inactive <a name="device-inactive"></a> | A device that has previously reported diagnostics data, but not in the last week.                                                                                                                                                                                                                                                                                                                                                      |
 | Device - Pending <a name="device-pending"></a>   | A device that has been created but diagnostics data has not yet been received. This can happen when devices have been created via API or CSV upload, or when devices check for OTA updates but are not uploading diagnostics data.                                                                                                                                                                                                     |
