Document all the AOSP rate limits (#141)
![Screenshot from 2021-11-26 09-44-54](https://user-images.githubusercontent.com/193881/143552921-39c50114-d6d4-41d7-b739-c181afcbcb6f.png)

--- a/docs/android/android-bort.mdx
+++ b/docs/android/android-bort.mdx
@@ -155,6 +155,14 @@ an app or OS update.
 The settings can be found in the `Settings` part of the web UI. SDK settings are
 only visible to and configurable by project administrators.
 
+:::note Rate Limiting
+
+Ingestion of data from Bort may be [rate-limited](/docs/platform/rate-limiting).
+We do not recommend lowering the collection intervals to be less than the
+default values.
+
+:::
+
 <p align="center">
   <img width="800" src="/binary-assets/android-project-web-sdk-settings.gif" />
 </p>
