One character typo (#135)

--- a/docs/mcu/test-patterns-for-chunks-endpoint.mdx
+++ b/docs/mcu/test-patterns-for-chunks-endpoint.mdx
@@ -149,6 +149,6 @@ us to get it enabled.
 
 ### Further Reading
 
-We recommend taking a look at the detailed documentation of the chunks endpoint
-refer to the [chunks endpoint API documentation](https://mflt.io/chunks-api) to
-learn more about the semantics of the API, the error codes, etc.
+We recommend taking a look at the detailed documentation of the chunks endpoint.
+To learn more about the semantics of the API and error codes refer to the
+[chunks endpoint API documentation](https://mflt.io/chunks-api)
