Add small explanation to gnu build id (#144)
Customer request.

--- a/src/pages/_partials/_steps/_add-build-id.mdx
+++ b/src/pages/_partials/_steps/_add-build-id.mdx
@@ -26,6 +26,10 @@ Be sure to update `\<YOUR_FLASH_SECTION\>` to match the name of the section
 
 :::
 
+The `.note.gnu.build-id` output section name is used to locate the build id when
+the symbol file is uploaded. The `__start_gnu_build_id_start` identifier is used
+at compile time by the SDK for populating the build id.
+
 </details>
 
 <details>
