Add Device Set docs (#122)

--- a/docs/platform/projects-and-fleets.mdx
+++ b/docs/platform/projects-and-fleets.mdx
@@ -60,7 +60,6 @@ cohort at a time.
 
 <!-- TODO: how does one create cohorts, how do devices end up in them? -->
 
-<!--
 ### Device Sets
 
 It is often useful to search for devices that fulfill certain criteria and to
@@ -69,7 +68,7 @@ searching for devices that:
 
 1. have not communicated with Memfault within the last N days,
 2. are running a deprecated software version, or
-3. are reporting a metric over a critical threshold
+3. are reporting a metric over a critical threshold.
 
 This kind of follow-up can easily be done by defining a **Device Set**, which
 will do a daily tally of a search query of your choice, and present it to you in
@@ -126,7 +125,6 @@ once per day, at roughly the same time. This provides an excellent large-scale
 overview of whatever properties of your fleet you may be interested in, but you
 shouldn't rely on the exact number, since the tallying time may vary slightly
 from day to day.
--->
 
 <!--
 TODO: Hardware Versions, Software Versions etc are also "organizational units", just in another dimension.
