Minor edits to pinnacle 100 docs (#146)

--- a/docs/mcu/pinnacle-100-guide.mdx
+++ b/docs/mcu/pinnacle-100-guide.mdx
@@ -38,7 +38,7 @@ your system!
 This tutorial assumes you have a working environment for building the
 [Pinnacle 100 Firmware](https://github.com/LairdCP/Pinnacle-100-Firmware-Manifest)
 (such as an an application based on the
-[AWS Out-of-Box Demo](https://github.com/LairdCP/Pinnacle-100-Firmware/blob/main/docs/readme_ltem_aws.md#building-the-firmware)).
+[AWS Out-of-Box Demo](https://lairdcp.github.io/guides/ble-gateway-firmware/1.0/docs/readme_aws.html)
 
 ## Create a Memfault Account
 
@@ -54,7 +54,6 @@ Add the following options to your system's `prj.conf`:
 # Project-specific configuration settings
 
 CONFIG_MEMFAULT_NCS_PROJECT_KEY="YOUR_PROJECT_KEY"
-CONFIG_MEMFAULT_NCS_FW_VERSION_PREFIX="1.0.0+"
 CONFIG_MEMFAULT_NCS_FW_TYPE="pinnacle-fw"
 ```
 
