fix typo in pinnacle 100 guide

--- a/docs/mcu/pinnacle-100-guide.mdx
+++ b/docs/mcu/pinnacle-100-guide.mdx
@@ -46,7 +46,7 @@ The integration requires a Memfault cloud account to process data collected by
 the Memfault Firmware SDK. You can create one
 [for free from here](https://goto.memfault.com/create-key/pinnacle-100)!
 
-## Update Kconfig selections in prj.con {#kconfig-section}
+## Update Kconfig selections in prj.conf {#kconfig-section}
 
 Add the following options to your system's `prj.conf`:
 
