--- a/docs/platform/issue-management.mdx
+++ b/docs/platform/issue-management.mdx
@@ -67,3 +67,17 @@ Trace is received from Software Version 1.3 for the same Issue, Memfault
 automatically reopens it and changes the Issue to Unresolved.
 
 :::
+
+## Monitoring Issue Occurrence
+
+Memfault offers different ways to monitor the occurrence of Issues over time.
+
+To visualize Issue occurrence at the fleet level, you can create
+[Issue Charts](/docs/platform/charts#issue-charts). Issue Charts group together
+related Issues and allow you to visualize their occurrence over time.
+
+Additionally, you can visualize the occurrence of an Issue over different
+Software Versions, Hardware Versions and Cohorts using the distribution
+visualization charts present in the **Issue details** view:
+
+![Issue distribution](/img/docs/platform/issue-distribution-min.png)
