--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -4,7 +4,12 @@ title: Rate Limiting
 
 import Link from "@docusaurus/Link";
 
-Here's a list of different events that may be rate-limited:
+Memfault employs rate limiting to prevent malfunctioning devices
+from causing excessive amounts of traffic on the platform, which in turn
+improves site stability. Rate limits also help us provide fair pricing to our
+customers.
+
+Below is a list of the APIs and payloads that may be rate-limited:
 
 <table>
   <thead>
