fix build due to missing prettier run (#152)
Introduced via 10dc0cceed927235505e168f75cf881082fca3b4 #151

--- a/docs/platform/rate-limiting.mdx
+++ b/docs/platform/rate-limiting.mdx
@@ -4,10 +4,9 @@ title: Rate Limiting
 
 import Link from "@docusaurus/Link";
 
-Memfault employs rate limiting to prevent malfunctioning devices
-from causing excessive amounts of traffic on the platform, which in turn
-improves site stability. Rate limits also help us provide fair pricing to our
-customers.
+Memfault employs rate limiting to prevent malfunctioning devices from causing
+excessive amounts of traffic on the platform, which in turn improves site
+stability. Rate limits also help us provide fair pricing to our customers.
 
 Below is a list of the APIs and payloads that may be rate-limited:
 
